RESOLVED FIXED196426
Trying to scroll the compose pane on gmail.com scrolls the message list behind
https://bugs.webkit.org/show_bug.cgi?id=196426
Summary Trying to scroll the compose pane on gmail.com scrolls the message list behind
Antti Koivisto
Reported 2019-03-30 09:23:29 PDT
Summary: Trying to scroll the gmail page by touching the compose panel doesn't work Steps To Reproduce: 1. Log in to gmail.com on iPad in landscape 2. Tap the Compose button 3. Drag in the compose area. The main page should rubber-band, rather than the message list scrolling (compare with desktop).
Attachments
patch (6.10 KB, patch)
2019-03-30 09:31 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-03-30 09:23:45 PDT
Antti Koivisto
Comment 2 2019-03-30 09:31:39 PDT
WebKit Commit Bot
Comment 3 2019-04-01 09:38:09 PDT
Comment on attachment 366363 [details] patch Clearing flags on attachment: 366363 Committed r243694: <https://trac.webkit.org/changeset/243694>
WebKit Commit Bot
Comment 4 2019-04-01 09:38:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.