Trying to scroll the compose pane on gmail.com scrolls the message list behind https://bugs.webkit.org/show_bug.cgi?id=196426 <rdar://problem/49402667>

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/scrolling/ios/event-region-visibility-hidden.html

We fail to gather event region from desdendants of non-overflowing elements with 'visibility:hidden'.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintObject):

Skip the subtree walk only if the current region covers the box already.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintList):

Remove the (wrong) optimization, we bail out quickly on first renderer if possible so this is not high value.

LayoutTests:

* fast/scrolling/ios/event-region-visibility-hidden-expected.txt: Added.
* fast/scrolling/ios/event-region-visibility-hidden.html: Added.


Canonical link: https://commits.webkit.org/210710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243694 268f45cc-cd09-0410-ab3c-d52691b4dbfc